--- a/src/assets/css/manteinence.scss
+++ b/src/assets/css/manteinence.scss
@@ -8,6 +8,8 @@
     height: 100%;
     flex-direction: column;
 
+    text-align: center;
+
     .uppercase{
         font-size: 3em;
         color: black;
